# prueba_python

./: .gitignore  Dockerfile  README.md  local.db  main.py  pyproject.toml  requirements.txt  test.db
app/db/: database.py  models.py
app/repository/: user.py  vacant.py
app/routers/: user.py  vacant.py
app/schema/: user.py  vacant.py
test/: test_main.py
